2010-01-01  Robby Stephenson  <robby@periapsis.org>

	* Added Giant Bomb data source.

2009-12-31  Robby Stephenson  <robby@periapsis.org>

	* Fixed adding "link-only" files (BUG #220645).
	* Fixed Discogs track download and title search.

2009-12-22  Robby Stephenson  <robby@periapsis.org>

	* Updated CrossRef data source to allow authentication via email address.
	* Updated Crossref data source for new schema.

2009-12-19  Robby Stephenson  <robby@periapsis.org>

	* Added MusicBrainz data source.

2009-12-18  Robby Stephenson  <robby@periapsis.org>

	* Fixed setting correct permissions of backup file (BUG #219259).
	* Fixed formatting of multiple people with auto-formatting (BUG #219268).

2009-12-16  Robby Stephenson  <robby@periapsis.org>

	* Added themoviedb.org data source.

2009-12-12  Robby Stephenson  <robby@periapsis.org>

	* Improve updating from Amazon to include book title or album title in search.

2009-12-04  Robby Stephenson  <robby@periapsis.org>

	* Added option for turning webcam off.

2009-11-30  Robby Stephenson  <robby@periapsis.org>

	* Enabled JavaScript for report dialog, incase a template wants to use it.
	* Fixed crashing bug for sorting during HTML export.
	* Fixed multiple selection in entry view (KDE #216122).

2009-11-20  Robby Stephenson  <robby@periapsis.org>

	* Fixed IMDB search to find director and writers.
	* Fixed Polish ISBN formatting.
	* Released Tellico 2.1.1.

2009-11-17  Robby Stephenson  <robby@periapsis.org>

	* Fixed sorting in icon view.

2009-11-16  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug that kept filters from being saved. BUG#214672.

2009-11-12  Robby Stephenson  <robby@periapsis.org>

	* Updated script for searching allocine.fr.

2009-11-11  Robby Stephenson  <robby@periapsis.org>

	* Changed webcam image preview to only appear when searching by ISBN or  UPC/EAN.

2009-11-10  Robby Stephenson  <robby@periapsis.org>

	* Fixed sorting when auto-formatting is on.
