@@ -45,6 +45,7 @@ public:
   virtual int rowCount(const QModelIndex& parent = QModelIndex()) const;
   virtual QModelIndex index(int row, int column, const QModelIndex& parent = QModelIndex()) const;
   virtual QModelIndex parent(const QModelIndex& index) const;
+  virtual QModelIndex indexFromEntry(Data::EntryPtr entry) const;
 
   virtual void clear();
   void reset();
